--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: ruby
 rvm:
-- rvm 2.3.0
+  - rvm 2.3.0
 
 install:
-- bundle install --jobs=3 --retry=3
+  - bundle install --jobs=3 --retry=3
 
 before_script:
-- RAILS_ENV=test rake db:create db:migrate
+  - bundle exec rubocop
+  - RAILS_ENV=test rake db:create db:migrate
 
 deploy:
   provider: heroku
