--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,19 @@ Documentation:
 Metrics/LineLength:
   Max: 100
 
+Metrics/BlockLength:
+  Max: 40
+  ExcludedMethods: ['describe', 'context', 'namespace', 'task']
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Style/NumericPredicate:
+  EnforcedStyle: predicate
+
+Style/SymbolArray:
+  Enabled: false
+
 AllCops:
   Exclude:
     - config/**/*
