Make RuboCop happy

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,6 +17,12 @@ Style/NumericPredicate:
 Style/SymbolArray:
   Enabled: false
 
+Layout/EmptyLineAfterGuardClause:
+  Enabled: false
+
+Lint/MissingCopEnableDirective:
+  Enabled: false
+
 AllCops:
   Exclude:
     - config/**/*
