--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: ruby
 cache: bundler
 rvm:
   - rvm 2.6.3
+services:
+  - postgresql
+addons:
+  postgresql: "9.5"
 
-before_script:
+script:
   - bundle exec rubocop
   - RAILS_ENV=test bundle exec rails db:create db:migrate
 
