--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,7 @@
+# Rails
+SECRET_KEY_BASE='<SECRET_KEY_BASE>'
+REDIS_URL='<REDIS_URL>'
+
 # AWS
 AWS_BUCKET='<AWS_BUCKET>'
 AWS_ACCESS_KEY_ID='<AWS_ACCESS_KEY_ID>'
