--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -14,4 +14,5 @@ test:
 
 production:
   <<: *common_env
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  secret_key_base: <%= ENV.fetch('SECRET_KEY_BASE') %>
+  redis_url:       <%= ENV.fetch('REDIS_URL') %>
