Improve the search experience
- Add pg_search
- Update search interface
- Enable unaccent extension
- Improve normalization strategy

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,7 +17,13 @@ Style/SymbolArray:
 Style/HashAsLastArrayItem:
   Enabled: false
 
+Layout/ArgumentAlignment:
+  Enabled: false
+
 Layout/EmptyLineAfterGuardClause:
+  Enabled: false
+
+Layout/HashAlignment:
   Enabled: false
 
 Layout/LineLength:
