Fix Heroku deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ script:
   - bundle exec rspec
   - bundle exec cucumber
 
+before_deploy:
+  - rvm $(travis_internal_ruby) --fuzzy do ruby -S gem install faraday -v 1.10.0
+
 deploy:
   provider: heroku
   api_key:
