Send notification when price changed

--- a/.env.test
+++ b/.env.test
@@ -8,3 +8,8 @@ REDIS_URL='<REDIS_URL>'
 AWS_BUCKET='<AWS_BUCKET>'
 AWS_ACCESS_KEY_ID='<AWS_ACCESS_KEY_ID>'
 AWS_SECRET_ACCESS_KEY='<AWS_SECRET_ACCESS_KEY>'
+
+# SENDGRID
+SENDGRID_API_KEY='<SENDGRID_API_KEY>'
+SENDGRID_EMAIL_FROM='<SENDGRID_EMAIL_FROM>'
+SENDGRID_EMAIL_TO='SENDGRID_EMAIL_TO'
