--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -3,6 +3,10 @@ common_env: &common_env
     bucket:            <%= ENV.fetch('AWS_BUCKET') %>
     access_key_id:     <%= ENV.fetch('AWS_ACCESS_KEY_ID') %>
     secret_access_key: <%= ENV.fetch('AWS_SECRET_ACCESS_KEY') %>
+  sendgrid:
+    api_key:    <%= ENV.fetch('SENDGRID_API_KEY') %>
+    email_from: <%= ENV.fetch('SENDGRID_EMAIL_FROM') %>
+    email_to:   <%= ENV.fetch('SENDGRID_EMAIL_TO') %>
 
 development:
   <<: *common_env
