--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,20 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
+        options:
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
 
     runs-on: ubuntu-latest
+
+    env:
+      RAILS_ENV: test
+      DATABASE_URL: "postgres://postgres:postgres@localhost:5432/hippocrates_test"
 
     steps:
       - uses: actions/checkout@v2
@@ -35,8 +47,6 @@ jobs:
 
       - name: Prepare database
         run: bundle exec rails db:create db:schema:load --trace
-        env:
-          RAILS_ENV: test
 
       - name: Run RSpec
         run: bundle exec rspec
