--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
   build:
     parallelism: 1
     docker:
-      - image: circleci/ruby:2.7.4
+      - image: cimg/2.7.4-node
         environment:
           BUNDLE_JOBS: 3
           BUNDLE_RETRY: 3
@@ -24,7 +24,7 @@ jobs:
           PGHOST: 127.0.0.1
           PGUSER: postgres
           RAILS_ENV: test
-      - image: circleci/postgres:9.5
+      - image: circleci/postgres:9.5-alpine-ram
         environment:
           POSTGRES_USER: postgres
           POSTGRES_DB: hippocrates_test
